# SVFGraph

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ICFGWrapper.cpp  ICFGWrapper.h  main.cpp
